Bug 169384 - Writer grid is displayed with fewer grid points after startup.
Summary: Writer grid is displayed with fewer grid points after startup.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Grid-Helplines
  Show dependency treegraph
 
Reported: 2025-11-11 14:36 UTC by Tamás Zolnai
Modified: 2025-11-12 10:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screen recording of the issue (1.63 MB, video/mp4)
2025-11-11 14:40 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2025-11-11 14:36:47 UTC
Description:
I noticed that if the grid is visible when loading a new, empty document in Writer, then Writer displays the grid having one point fewer subdivisions. For example, if the grid setting contains 4 subdivisions, Writer displays only 3 by startup.

However, after doing a zoom, the grid is updated to the correct number of subdivision points.

Steps to Reproduce:
1. Open Writer
2. Change grid settings to have 2 subdivisions both horizontally and vertically.
   * Tools -> Options -> LibreOffice Writer -> Grid
3. Close the document (do not close LibreOffice)
4. Open a new Writer document
   -> No subdivision points are displayed.
5. Do a zoom with CTRL + mouse scroll
   -> Grid is updated and displays the proper number of subdivision points.

Actual Results:
Wrong number(0) of subdivision points displayed after startup.

Expected Results:
Correct number(1) of subdivision points should be displayed after startup.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.1.1 (X86_64) / LibreOffice Community
Build ID: 580(Build:1)
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: kf6 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Tamás Zolnai 2025-11-11 14:40:03 UTC
Created attachment 203870 [details]
Screen recording of the issue
Comment 2 Commit Notification 2025-11-12 10:18:51 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/28c842ba5271947a47d32cf70077b2b6fe28eeec

tdf#169384: Apply proper subdivison settings by startup in Writer.

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.