tdf#169384: Apply proper subdivison settings by startup in Writer.

Internal division numbers need to be increased by one to
get proper grid distance values.

See also SwViewShell::ImplApplyViewOptions() method which
applies grid settings in other use cases.

Change-Id: Ia9c299b555bcdf7ca6d28b4c9838f8effcde1d16
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193841
Tested-by: Jenkins
Reviewed-by: Tamás Zolnai <zolnaitamas2000@gmail.com>