sw/source/core/view/viewimp.cxx
@@ -65,8 +65,8 @@ void SwViewShellImp::Init( const SwViewOption *pNewOpt )
     const Size &rSz = pNewOpt->GetSnapSize();
     m_pDrawView->SetGridCoarse( rSz );
     const Size aFSize
-            ( rSz.Width() ? rSz.Width() /std::max(short(1),pNewOpt->GetDivisionX()):0,
-              rSz.Height()? rSz.Height()/std::max(short(1),pNewOpt->GetDivisionY()):0);
+            ( rSz.Width() ? rSz.Width() / (pNewOpt->GetDivisionX() + 1):0,
+              rSz.Height()? rSz.Height()/ (pNewOpt->GetDivisionY() + 1):0);
     m_pDrawView->SetGridFine( aFSize );
     Fraction aSnGrWdtX(rSz.Width(), pNewOpt->GetDivisionX() + 1);
     Fraction aSnGrWdtY(rSz.Height(), pNewOpt->GetDivisionY() + 1);
